--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Route MNL</string>
+    <string name="title_activity_phil_pasay">philPasay</string>
 
 
 </resources>
